src/snapshots/gitui__gitui__tests__app_loading_finished.snap
---
source: src/gitui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5][TEMP_FILE] "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes───────────────────────────┐┌Diff: ─────────────────────────────────────┐"
"│+ initial.txt                              ││Loading ...                                │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────↑0 ↓0 {}┘│                                           │"
"┌Staged Changes─────────────────────────────┐│                                           │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘└───────────────────────────────────────────┘"
"Stage All [a] Stage [⏎] Reset [⇧D] Ignore [i] Branches [b] Push [p] Fetch [⇧F]    more [.]"
