src/snapshots/gitui__gitui__tests__app_log_tab_showing_one_commit.snap
---
source: src/gitui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files [3]  |  Stashing [4]  |  Stashes [5][TEMP_FILE] "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Commit 0/0──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Scroll [↑↓] Mark [˽] Details [⏎] Branches [b] Compare [⇧C] Copy Hash [y] Tag [t]  more [.]"
